[package]
name = "polarbear"
version = "0.1.0"
edition = "2024"
authors = ["misaka10987 <misaka10987@outlook.com>"]
description = "Polar bears' panel for wayland"
documentation = "https://github.com/misaka10987/polarbear"
homepage = "https://github.com/misaka10987/polarbear"
repository = "https://github.com/misaka10987/polarbear"
readme = "README.md"
keywords = ["polarbear", "panel", "wayland", "bar"]
license = "GPL-3.0-only"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.37", features = ["derive"] }
iced = { version = "0.13.1", features = ["tokio"] }
iced_layershell = "0.13.5"
tracing-subscriber = "0.3.19"
