[package]
name = "polarbear"
version = "0.4.2"
edition = "2024"
authors = ["misaka10987 <misaka10987@outlook.com>"]
description = "Polar bears' panel for wayland"
documentation = "https://github.com/misaka10987/polarbear"
homepage = "https://github.com/misaka10987/polarbear"
repository = "https://github.com/misaka10987/polarbear"
readme = "README.md"
keywords = ["polarbear", "panel", "wayland", "bar"]
license = "GPL-3.0-only"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.37", features = ["derive"] }
dirs = "6.0.0"
iced = { version = "0.13.1", features = ["tokio", "svg"] }
iced_layershell = "0.13.5"
native-dialog = { version = "0.9.0", features = ["async"] }
serde = "1.0.219"
serde-inline-default = "0.2.3"
toml = "0.8.22"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
